Fix navigation buttons alignment: left to left edge, right to right edge

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2247,6 +2247,15 @@ main + .site-footer {
     flex: 0 0 50%;
     max-width: 50%;
   }
+  
+  .pt-8 .row,
+  .pt-md-9 .row {
+    justify-content: space-between;
+  }
+  
+  .col-sm-6.text-right {
+    margin-left: auto;
+  }
 }
 
 @media (min-width: 768px) {
